
Package: PSCBS
==============

Version: 0.34.1 [2013-03-21]
o Updated the report generator and its RSP templates.
o DOCUMENTATION: Clarified in the PSCBS vignette that the NTCN
  caller is under development, experimental.


Version: 0.34.0 [2013-03-19]
o CALLING: Defined a formal hypthesis test for how segments are called
  copy-neutral in TCN (NTCN), with the null hypothesis being that a 
  segment is NTCN.  In order for a segment to not be NTCN, its confidence
  interval has to be completely outside the null region.  This changed
  how callCopyNeutralByTCNofAB() for PairedPSCBS calls segments; it is
  now a bit more conservative in rejecting NTCN.


Version: 0.33.4 [2013-03-19]
o ROBUSTNESS: Now calcStatsForCopyNeutralABs() for PairedPSCBS does
  a better job in identifying the TCN mode of the AB segments.
o Added argument 'flavor' to findNeutralCopyNumberState() specifying 
  how to identify the main mode of the AB segments.
o VISUALIZATION: Now plotTracks() for PairedPSCBS displays thresholds
  for calling AB, LOH and and NTCN.


Version: 0.33.3 [2013-03-12]
o DOCUMENTATION: Documented 'tauA' and 'tauB' in the help for
  segmentByNonPairedPSCBS().


Version: 0.33.2 [2013-03-09]
o Added getLocusData() for PairedPSCBS and NonPairedPSCBS.
o Added an Authors@R field to the DESCRIPTION.
o DOCUMENTATION: Updated the vignettes and the report templates to
  utilize the new ggplot2 themes - ggplot2 no longer gives a
  warning on using deprecated functions.
o Now report() for AbstractCBS also includes files listed in the 
  optional file '.install_extras' of the source RSP template 
  directory.  The same filename is used by 'R CMD build/check' for
  including additional source files needed to build the vignettes.


Version: 0.33.1 [2013-03-07]
o Relaxed the internal precision tests of testROH().  This was done
  in response to the CRAN farm lowering its precision on some hosts.
o DOCUMENTATION: Preparing package vignettes for the upcoming 