@@ -6,6 +6,8 @@ Version: 0.34.1 [2013-03-21]
 o Updated the report generator and its RSP templates.
 o DOCUMENTATION: Clarified in the PSCBS vignette that the NTCN
   caller is under development, experimental.
+o SPEEDUP: Made dropChangePoints() faster by only updating the 
+  segment statistics/means at the very end.
 
 
 Version: 0.34.0 [2013-03-19]
